...
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="settingsTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                                            <nil key="highlightedColor"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="cityNameLabel"/>
                                            </userDefinedRuntimeAttributes>
                                        </label>
...
                                            <nil key="highlightedColor"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="temperatureLabel"/>
                                            </userDefinedRuntimeAttributes>
                                        </label>
...
                                            </constraints>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="iconImage"/>
                                            </userDefinedRuntimeAttributes>
                                        </imageView>
...
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="weatherTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        <barButtonItem key="leftBarButtonItem" title="Settings" id="zCN-q4-73m">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="settingsButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="azG-cF-rym">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="cityNameTextFiled"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
...
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="saveButton"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
